[project]
name = "lpt-stake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "marimo>=0.11.19",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pytz>=2025.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "urllib3>=2.3.0",
    "web3>=7.9.0",
]
